# yogen

./: .gitignore  README.md  TODO  main.py  page.py  parser.py  pyproject.toml  structure.py  watcher.py
content/: index.md  style.css
content/posts/utf-encoding/: index.md
content/resume/es/: index.md
src/: parser.py  site.py  watcher.py
src/structure/: page.py  site.py
src/tests/: run.py  test_cli.py
src/yogen/: _site.py  defaults.py  main.py
src/yogen.egg-info/: SOURCES.txt
src/yogen/defaults/: rss-config.json
src/yogen/defaults/content/: home.md  index.md
src/yogen/defaults/content/about/: index.md
src/yogen/defaults/content/posts/example-post/: index.md
src/yogen/defaults/content/posts/simple-blog/: index.md
src/yogen/defaults/content/posts/utf-encoding/: index.md
src/yogen/defaults/content/resume/en/: index.md
src/yogen/defaults/templates/: template-home.html  template-post.html  template.html
templates/: template-home.html  template.html
tests/: test_cli.py  test_watcher.py
yogen/: __main__.py  config.py  page.py  rss.py  watcher.py  website.py
yogen/defaults/: yogen.toml
yogen/defaults/content/: home.md
yogen/defaults/content/about/: index.md
yogen/defaults/content/posts/example-post/: index.md
yogen/defaults/static/: style.css
